# PlotStuff

./: .gitignore  CMakeLists.txt  Pcd.cpp  Pcd.hpp  Plot.cpp  Plot.hpp  Point3d.cpp  Point3d.hpp  README.md  Render3d.cpp  Render3d.hpp  main.cpp
Output/: BmpWriter.cpp  BmpWriter.hpp  ImageWriter.hpp  SfmlWriter.cpp  SfmlWriter.h  XWriter.cpp  XWriter.hpp
